[package]
name = "cyrel"
version = "0.1.0"
authors = ["alyrow", "Lucas Ransan <lucas@ransan.tk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpc-http-server = "18"
jsonwebtoken = "7"
serde = { version = "1.0", features = ["derive"] }
