[package]
name = "cyrel"
version = "0.1.0"
authors = ["alyrow", "Lucas Ransan <lucas@ransan.tk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4", features = ["sqlite"] }
dotenv = "0.15"
jsonrpc-core = "18"
jsonrpc-derive = "18"
jsonrpc-http-server = "18"
jsonwebtoken = "7"
pbkdf2 = "0.8"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
