[package]
name = "cyrel"
version = "0.1.0"
authors = ["alyrow", "Lucas Ransan <lucas@ransan.tk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
config = "0.11"
chrono = { version = "0.4", features = ["serde"] }
clap = "2"
env_logger = "0.9"
diesel = { version = "1.4", features = ["sqlite"] }
dotenv = "0.15"
html-escape = "0.2"
jsonrpc-core = { git = "https://github.com/luc65r/jsonrpc" }
jsonrpc-derive = { git = "https://github.com/luc65r/jsonrpc" }
jsonrpc-http-server = { git = "https://github.com/luc65r/jsonrpc" }
jsonwebtoken = "7"
lazy_static = "1.4"
log = "0.4"
pbkdf2 = "0.8"
rand = "0.8"
regex = "1"
reqwest = { version = "0.11", features = ["json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
thiserror = "1.0"
