[package]
name = "cyrel-sync"
version = "0.1.0"
authors = ["Lucas Ransan <lucas@ransan.tk", "alyrow"]
edition = "2018"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
cy-celcat = "0.2"
dotenv = "0.15"
futures = "0.3"
sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "postgres", "chrono", "json"] }
tokio = { version = "1", features = ["full"] }
