[package]
name = "cyrel"
version = "0.1.0"
authors = ["alyrow", "Lucas Ransan <lucas@ransan.tk>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = "2"
config = "0.11"
dotenv = "0.15"
futures = "0.3"
html-escape = "0.2"
jsonrpc-core = { git = "https://github.com/luc65r/jsonrpc", rev = "6ae633c0fa4dfdc00711877ac2154a83bdc08611" }
jsonrpc-derive = { git = "https://github.com/luc65r/jsonrpc", rev = "6ae633c0fa4dfdc00711877ac2154a83bdc08611" }
jsonrpc-http-server = { git = "https://github.com/luc65r/jsonrpc", rev = "6ae633c0fa4dfdc00711877ac2154a83bdc08611" }
jsonwebtoken = "7"
lazy_static = "1.4"
lettre = "0.10.0-rc.4"
log = "0.4"
num-derive = "0.3"
num-traits = "0.2"
once_cell = "1.7.2"
pbkdf2 = "0.8"
rand = "0.8"
regex = "1"
reqwest = { version = "0.11", features = ["json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "postgres", "chrono", "json", "offline"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "0.8", features = ["v4"] }
void = "1"
